--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Aline Vitalino Doces Gourmet</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
     * {
       margin: 0;
       padding: 0;
@@ -13,177 +15,255 @@
 
     body {
       background-color: #ffeeee;
-      font-family: Arial, sans-serif;
+      font-family: 'Montserrat', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 20px 10px;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    .app-container {
+      background: #fff;
+      width: 100%;
+      max-width: 420px;
+      border-radius: 24px;
+      box-shadow: 0 12px 30px rgba(179, 0, 0, 0.2);
+      padding: 25px 30px 40px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 100vh;
-      padding: 20px;
     }
 
     .logo-container img {
-      max-width: 200px;
+      width: 140px;
       height: auto;
+      border-radius: 20px;
       margin-bottom: 20px;
+      user-select: none;
+      -webkit-user-drag: none;
     }
 
     h1 {
-      font-size: 24px;
+      font-weight: 700;
+      font-size: 28px;
       color: #b30000;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       text-align: center;
+      letter-spacing: 0.03em;
+      user-select: none;
     }
 
     form {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 12px;
       width: 100%;
-      max-width: 400px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
     }
 
     label {
-      display: block;
-      margin-bottom: 5px;
-      color: #333;
-      font-weight: bold;
+      font-weight: 600;
+      font-size: 14px;
+      color: #4a4a4a;
+      margin-bottom: 6px;
+      margin-left: 4px;
+      user-select: none;
     }
 
     input, select {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      background-color: #fafafa;
+      border: 1.8px solid #dcdcdc;
+      border-radius: 14px;
+      padding: 14px 18px;
       font-size: 16px;
+      color: #222;
+      margin-bottom: 20px;
+      outline-offset: 2px;
+      transition: border-color 0.3s ease;
+    }
+    input:focus, select:focus {
+      border-color: #b30000;
+      background-color: #fff5f5;
+      outline: none;
+      box-shadow: 0 0 8px rgba(179, 0, 0, 0.3);
     }
 
     input[readonly] {
-      background-color: #f5f5f5;
-      color: #555;
+      background-color: #f9f9f9;
+      color: #888;
+      cursor: not-allowed;
     }
 
     .inline-buttons {
       display: flex;
       justify-content: space-between;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-      flex-wrap: wrap;
+      gap: 14px;
+      margin-bottom: 30px;
     }
 
     button {
       flex: 1;
-      padding: 10px;
+      padding: 16px 0;
+      font-size: 18px;
+      font-weight: 700;
+      border-radius: 14px;
       border: none;
-      border-radius: 6px;
-      font-size: 16px;
       cursor: pointer;
-      color: #fff;
+      color: white;
+      transition: background-color 0.25s ease;
+      box-shadow: 0 6px 10px rgba(0,0,0,0.07);
+      user-select: none;
+    }
+
+    button:active {
+      transform: scale(0.97);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
 
     .add-btn {
-      background-color: #ff6666;
+      background: linear-gradient(135deg, #ff7b7b, #d93e3e);
     }
-
-    .order-btn {
-      background-color: #28a745;
+    .add-btn:hover {
+      background: linear-gradient(135deg, #d93e3e, #ff7b7b);
     }
 
     .clear-btn {
-      background-color: #999;
+      background: #999999;
+    }
+    .clear-btn:hover {
+      background: #7a7a7a;
+    }
+
+    .order-btn {
+      background: linear-gradient(135deg, #28a745, #1e7e34);
+      margin-top: 10px;
+    }
+    .order-btn:hover {
+      background: linear-gradient(135deg, #1e7e34, #28a745);
     }
 
     hr {
       border: none;
-      border-top: 1px solid #ccc;
-      margin: 20px 0;
+      border-top: 1.5px solid #e2cfcf;
+      margin: 30px 0;
+      width: 100%;
+      border-radius: 6px;
     }
 
     .pedido-lista {
+      width: 100%;
+      background: #fff0f0;
+      border-radius: 14px;
+      padding: 16px 20px;
+      max-height: 160px;
+      overflow-y: auto;
       font-size: 16px;
-      margin-bottom: 15px;
+      color: #5a1a1a;
+      box-shadow: inset 0 0 6px rgba(179,0,0,0.1);
       white-space: pre-wrap;
+      user-select: text;
     }
 
     .pedido-total {
-      font-weight: bold;
+      font-weight: 700;
+      font-size: 18px;
+      color: #b30000;
       margin-top: 10px;
+      user-select: none;
+      text-align: right;
+      width: 100%;
     }
 
     footer {
-      margin-top: auto;
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      background-color: #fff0f0;
+      margin-top: 35px;
       font-size: 14px;
-      color: #444;
+      color: #a65d5d;
+      user-select: none;
+      text-align: center;
+      width: 100%;
+    }
+
+    /* Scrollbar styling para lista pedidos */
+    .pedido-lista::-webkit-scrollbar {
+      width: 6px;
+    }
+    .pedido-lista::-webkit-scrollbar-thumb {
+      background-color: #b30000cc;
+      border-radius: 10px;
+    }
+
+    /* Pequenas melhorias para celular */
+    @media (max-width: 400px) {
+      .app-container {
+        padding: 20px 15px 30px;
+        border-radius: 20px;
+      }
+      h1 {
+        font-size: 24px;
+        margin-bottom: 24px;
+      }
+      button {
+        font-size: 16px;
+        padding: 14px 0;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="logo-container">
-    <img src="https://i.imgur.com/1W2L9KK.jpeg" alt="Logo Aline Vitalino Doces Gourmet" />
+  <div class="app-container" role="main" aria-label="Aplicativo de pedidos Aline Vitalino Doces Gourmet">
+    <div class="logo-container">
+      <img src="https://i.imgur.com/1W2L9KK.jpeg" alt="Logo Aline Vitalino Doces Gourmet" draggable="false" />
+    </div>
+
+    <h1>Faça Sua Encomenda Aqui!</h1>
+
+    <form id="pedidoForm" novalidate>
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required autocomplete="name" placeholder="Digite seu nome" />
+
+      <label for="telefone">Telefone:</label>
+      <input type="tel" id="telefone" name="telefone" required autocomplete="tel" placeholder="(99) 99999-9999" pattern="[\d\s\-\+\(\)]+" />
+
+      <label for="data">Data:</label>
+      <input type="date" id="data" name="data" readonly aria-readonly="true" />
+
+      <label for="produtos">Produtos:</label>
+      <select id="produtos" name="produtos" required aria-required="true">
+        <option value="">Carregando...</option>
+      </select>
+
+      <label for="quantidade">Quantidade:</label>
+      <input type="number" id="quantidade" name="quantidade" min="1" value="1" required />
+
+      <div class="inline-buttons">
+        <button type="button" class="add-btn" aria-label="Adicionar ao carrinho" onclick="adicionarCarrinho()">Adicionar ao Carrinho</button>
+        <button type="button" class="clear-btn" aria-label="Apagar formulário e carrinho" onclick="limparFormulario()">Apagar</button>
+      </div>
+
+      <hr />
+
+      <div class="pedido-lista" id="listaPedidos" aria-live="polite" aria-relevant="additions" role="region" tabindex="0">
+        Nenhum item no carrinho.
+      </div>
+
+      <div class="pedido-total" id="totalPedido" aria-atomic="true">Total: R$ 0,00</div>
+
+      <hr />
+
+      <label for="valor">Valor Total (R$):</label>
+      <input type="number" id="valor" name="valor" readonly aria-readonly="true" />
+
+      <label for="vendedor">Vendedor:</label>
+      <input type="text" id="vendedor" name="vendedor" value="Isa" readonly aria-readonly="true" />
+
+      <button type="submit" class="order-btn" aria-label="Fazer pedido">Fazer Pedido</button>
+    </form>
+
+    <footer>
+      Aline Vitalino Doces Gourmet - 2025
+    </footer>
   </div>
-
-  <h1>Faça Sua Encomenda Aqui!</h1>
-
-  <form id="pedidoForm">
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" required />
-
-    <label for="telefone">Telefone:</label>
-    <input type="tel" id="telefone" required placeholder="(99) 99999-9999" pattern="[\d\s\-\+\(\)]+" />
-
-    <label for="data">Data:</label>
-    <input type="date" id="data" readonly />
-
-    <label for="produtos">Produtos:</label>
-    <select id="produtos" required>
-      <option value="">Carregando...</option>
-    </select>
-
-    <label for="quantidade">Quantidade:</label>
-    <input type="number" id="quantidade" min="1" value="1" required />
-
-    <div class="inline-buttons">
-      <button type="button" class="add-btn" onclick="adicionarCarrinho()">Adicionar ao Carrinho</button>
-      <button type="button" class="clear-btn" onclick="limparFormulario()">Apagar</button>
-    </div>
-
-    <hr />
-
-    <div class="pedido-lista" id="listaPedidos">
-      Nenhum item no carrinho.
-    </div>
-
-    <div class="pedido-total" id="totalPedido">
-      Total: R$ 0,00
-    </div>
-
-    <hr />
-
-    <label for="valor">Valor Total (R$):</label>
-    <input type="number" id="valor" readonly />
-
-    <label for="vendedor">Vendedor:</label>
-    <input type="text" id="vendedor" value="Isa" readonly />
-
-    <div class="buttons">
-      <button type="submit" class="order-btn">Fazer Pedido</button>
-    </div>
-  </form>
-
-  <footer>
-    Aline Vitalino Doces Gourmet - 2025
-  </footer>
 
   <script>
     const produtosFirebase = {};
@@ -192,7 +272,7 @@
     const TELEGRAM_BOT_TOKEN = '7606421931:AAEKx9TdlH8xQAElgplPjEKq1K7Px33d4DA';
     const TELEGRAM_CHAT_ID = '7863276089';
 
-    window.onload = function () {
+    window.onload = () => {
       const hoje = new Date().toISOString().split("T")[0];
       document.getElementById("data").value = hoje;
       carregarProdutos();
@@ -200,7 +280,7 @@
 
     function carregarProdutos() {
       fetch("https://testepedidosstatus-default-rtdb.europe-west1.firebasedatabase.app/.json")
-        .then(response => response.json())
+        .then(res => res.json())
         .then(data => {
           const select = document.getElementById("produtos");
           select.innerHTML = '<option value="">Selecione um produto</option>';
@@ -218,19 +298,22 @@
     }
 
     function adicionarCarrinho() {
-      const produtoSelecionado = document.getElementById("produtos").value;
+      const produto = document.getElementById("produtos").value;
       const quantidade = parseInt(document.getElementById("quantidade").value);
 
-      if (!produtoSelecionado || quantidade <= 0) {
-        alert("Selecione um produto válido e quantidade maior que 0.");
+      if (!produto) {
+        alert("Selecione um produto válido.");
+        return;
+      }
+      if (!quantidade || quantidade < 1) {
+        alert("Informe uma quantidade válida.");
         return;
       }
 
-      const precoUnitario = produtosFirebase[produtoSelecionado];
-      const subtotal = precoUnitario * quantidade;
+      const preco = produtosFirebase[produto];
+      const subtotal = preco * quantidade;
 
-      carrinho.push({ produto: produtoSelecionado, quantidade, subtotal });
-
+      carrinho.push({ produto, quantidade, subtotal });
       atualizarListaCarrinho();
     }
 
@@ -248,7 +331,6 @@
 
       lista.innerHTML = "";
       let total = 0;
-
       carrinho.forEach(item => {
         const linha = document.createElement("div");
         linha.textContent = `${item.quantidade}x ${item.produto} R$ ${item.subtotal.toFixed(2)}`;
@@ -289,7 +371,7 @@
       }
     }
 
-    document.getElementById("pedidoForm").addEventListener("submit", async function (e) {
+    document.getElementById("pedidoForm").addEventListener("submit", async e => {
       e.preventDefault();
 
       if (carrinho.length === 0) {
@@ -297,14 +379,13 @@
         return;
       }
 
-      const nomeCliente = document.getElementById("nome").value.trim();
+      const nome = document.getElementById("nome").value.trim();
       const telefone = document.getElementById("telefone").value.trim();
 
-      if (!nomeCliente) {
+      if (!nome) {
         alert("Por favor, preencha o nome do cliente.");
         return;
       }
-
       if (!telefone) {
         alert("Por favor, preencha o telefone do cliente.");
         return;
@@ -312,29 +393,25 @@
 
       const valorTotal = document.getElementById("valor").value;
 
-      let listaProdutosStr = "";
+      let produtosTxt = "";
       carrinho.forEach(item => {
-        listaProdutosStr += `${item.quantidade}x ${item.produto} R$ ${item.subtotal.toFixed(2)}\n`;
+        produtosTxt += `${item.quantidade}x ${item.produto} R$ ${item.subtotal.toFixed(2)}\n`;
       });
 
-      const mensagemTelegram =
+      const mensagem =
         `*Novo Pedido Azul*\n` +
         `-----------------------------------\n` +
-        `👤Cliente: ${nomeCliente}\n` +
+        `👤Cliente: ${nome}\n` +
         `📞Fone: ${telefone}\n` +
         `💵Valor: R$ ${valorTotal}\n` +
-        `📦Produtos:\n${listaProdutosStr}` +
+        `📦Produtos:\n${produtosTxt}` +
         `-----------------------------------`;
 
-      const sucesso = await enviarPedidoTelegram(mensagemTelegram);
+      const sucesso = await enviarPedidoTelegram(mensagem);
 
       if (sucesso) {
         alert("Pedido enviado com sucesso ao Telegram!");
-        this.reset();
-        document.getElementById("data").value = new Date().toISOString().split("T")[0];
-        document.getElementById("vendedor").value = "Isa";
-        carrinho.length = 0;
-        atualizarListaCarrinho();
+        limparFormulario();
       } else {
         alert("Erro ao enviar o pedido. Tente novamente.");
       }
